--- a/index.html
+++ b/index.html
@@ -9,10 +9,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     
-    <title>I'm human.</title>
+    <title>Varify not Robot</title>
 </head>
 <body>
-    <h1>hi monir</h1>
+   <div class="form-container">
+    <form action="NotRobot.html">
+        <h2>Select the Hexadecimal Color : <span id="select-color">for identifying!</span></h2>
+        <input type="checkbox" id="checkbox"/>
+        <label for="checkbox">Are You Human?</label>
+        <button class="btn btn-light" type="submit">Submit</button>
+        
+    </form>
+   </div>
+   <main class="container">
+    <div class="element"></div>
+    <div class="element"></div>
+    <div class="element"></div>
+    <div class="element"></div>
+    <div class="element"></div>
+    <div class="element"></div>
+    <div class="element"></div>
+    <div class="element"></div>
+    <div class="element"></div>
+   </main>
 
     <script src="main.js"></script>
 </body>
